--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Security-Policy" content="default-src *;
+   img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;
+   style-src  'self' 'unsafe-inline' *">
     <link rel="shortcut icon" type="image/x-icon" href="camera.ico" />
     <title>Flickr Tag Search</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
@@ -31,7 +34,7 @@
     <script src="libs/Leaflet.Photo.js"></script>
     <script src="libs/app.js"></script>
 
-    
+
 </body>
 
 </html>
