--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h5>Returns a max of 250 photos.</h5>
         <input type="text" id='input' name="tags" placeholder="Search for tags!">
     
-    <h5>Search by bounding box:</h5>
+    <!--<h5>Search by bounding box:</h5> -->
     </div>
     <div id="map"></div>
 
