--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
     <link rel="stylesheet" href="libs/Leaflet.Photo.css" />
     <link rel="stylesheet" href="libs/MarkerCluster.Default.css" />
-    <link rel="stylesheet" href="libs/leaflet.draw.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css" />
     <link rel="stylesheet" href="libs/mystyle.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow&display=swap">
 
@@ -24,17 +24,18 @@
         <h4>Search flickr tags to see geolocated photos</h4>
         <h5>Returns a max of 250 photos.</h5>
         <input type="text" id='input' name="tags" placeholder="Search for tags!">
-    
-    <!--<h5>Search by bounding box:</h5> -->
+        <br>
+        <button type="button" onclick="removePhotoLayer()">New Search</button>
+
     </div>
     <div id="map"></div>
 
     <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
-  <!--  <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script> -->
+    <!--  <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script> -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="libs/leaflet.markercluster.js"></script>
     <script src="libs/Leaflet.Photo.js"></script>
-    <script src="libs/Leaflet.draw.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
     <script src="libs/app.js"></script>
 
 
