--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div id='sidebar'>
         <h4>Search flickr tags to see geolocated photos</h4>
-        <h5>Returns a max of 250 photos.</h5>
+        <h5>Use the tools on the left to draw a bounding box. Returns a max of 250 photos. To reset, click New Search below</h5>
         <input type="text" id='input' name="tags" placeholder="Search for tags!">
         <br>
         <button type="button" onclick="removePhotoLayer()">New Search</button>
