only use d3-fetch

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     <div id="map"></div>
 
     <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
-    <!--  <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script> -->
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/d3-fetch.v1.min.js"></script>
     <script src="libs/leaflet.markercluster.js"></script>
     <script src="libs/Leaflet.Photo.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
